# eiufablab-drone-framework

./: .gitignore  README.md  minsnap_traj.csv  offboard_mode.cpp  testing.py
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/srv/: ModeSignal.srv
drone_msgs/: CMakeLists.txt  package.xml
drone_msgs/srv/: ModeSignal.srv
interface_control/: CMakeLists.txt  package.xml
lora_transmit/custom_msgs/: CMakeLists.txt  package.xml
lora_transmit/custom_msgs/srv/: ModeSignal.srv
lora_transmit/lora_drone_package/: package.xml  setup.cfg  setup.py
lora_transmit/lora_drone_package/launch/: bringup.launch.py
lora_transmit/lora_drone_package/lora_drone_package/: lora_drone.py
lora_transmit/offboard_control/: CMakeLists.txt  package.xml
lora_transmit/offboard_control/config/: offboard.yaml
lora_transmit/offboard_control/include/offboard_control/: offboard_mode.hpp
lora_transmit/offboard_control/launch/: offboard_launch.py
offboard_control/: CMakeLists.txt  package.xml
offboard_control/include/offboard_control/: convertGPStoENU.hpp  drone_transformation.hpp  marker_publish.hpp  offboard_control.hpp  optimize_trajectory.hpp  process_waypoint.hpp  recieve_transform_waypoints.hpp
offboard_control/launch/: offboard_control.launch.py
offboard_control/python_script/: lora_transmit.py
offboard_control/python_script/Mathematic/: WaypointOptimization.py  minimum_snap_traj.csv  waypoints.csv
offboard_control/src/: Makefile  convertGPStoENU  convertGPStoENU.cpp  drone_transformation.cpp  marker_publish.cpp  offboard.py  offboard_control.cpp  offboard_control_server.cpp  process_waypoint.cpp  process_waypoint.py  recieve_transform_waypoints.cpp  test_code.py  waypoint_log.csv
offboard_control/src/csv_files/: minimum_snap_traj.csv  waypoint_list.csv  waypoint_transfered_list.csv
testingMath/: test.py
